[tool.poetry]
name = "flask-ia-poetry"
version = "0.1.0"
description = ""
authors = ["lruizap <lruizap2502@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
